crates/triplespace-ui/tests/snapshots/entity__foreign_item_sitelinks.snap
---
source: crates/triplespace-ui/tests/entity.rs
expression: main_of(&html)
---
<main class="ts-page" id="content">
	<p class="ts-page__identity">
<span class="ts-chip ts-chip--provider ts-chip--p-wd">WDQ65</span> <span>Foreign item, minted by Wikidata</span> <span aria-hidden="true">·</span> <a href="http://www.wikidata.org/entity/Q65" class="external" rel="noopener" dir="ltr">wikidata.org/entity/Q65 ↗</a>
</p>
	<h1 class="ts-page__title">Los Angeles</h1>
	<div class="ts-terms" data-region="terms">
<p class="ts-terms__description">largest city in California, United States</p>
<p class="ts-terms__aliases">Also known as <span>LA · City of Angels</span>
</p>
</div>
	<nav class="ts-tabs" aria-label="Page">
		<a class="ts-tabs__link" href="/wiki/Item:WDQ65">Statements</a>
		<a class="ts-tabs__link" href="/wiki/Item:WDQ65?tab=identifiers">Identifiers</a>
		<a class="ts-tabs__link" href="/wiki/Item:WDQ65?tab=sitelinks" aria-current="page">Sitelinks</a>
		<a class="ts-tabs__link" href="/wiki/Item:WDQ65?tab=labels">Labels in other languages</a>
	</nav>
	<div class="ts-page__body">
		<div class="ts-sitelinks" data-region="sitelinks">
<section class="ts-sitelinks__host">
<h3>
<a href="/wiki/Domain:en.wikipedia.org">
<span class="ts-chip ts-chip--namespace">en.wikipedia.org</span>
</a>
</h3>
<ul>
<li>
<a href="https://en.wikipedia.org/wiki/Los_Angeles" class="external" rel="noopener">
<span>Los Angeles</span>
</a>
</li>
</ul>
</section>
<section class="ts-sitelinks__host">
<h3>
<a href="/wiki/Domain:es.wikipedia.org">
<span class="ts-chip ts-chip--namespace">es.wikipedia.org</span>
</a>
</h3>
<ul>
<li>
<a href="https://es.wikipedia.org/wiki/Los_%C3%81ngeles" class="external" rel="noopener">
<span lang="es" dir="auto">Los Ángeles</span>
</a>
</li>
</ul>
</section>
</div>
	</div>
</main>
