crates/triplespace-ui/tests/snapshots/entity__item_labels.snap
---
source: crates/triplespace-ui/tests/entity.rs
expression: main_of(&html)
---
<main class="ts-page" id="content">
	<p class="ts-page__identity">
<span class="ts-chip ts-chip--local">Q6</span> <span>Item</span> <span aria-hidden="true">·</span> <span>Adopted from https://librarybase.org/</span> <span aria-hidden="true">·</span> <a href="https://librarybase.org/entity/Q6" class="external" rel="noopener" dir="ltr">librarybase.org/entity/Q6 ↗</a>
</p>
	<h1 class="ts-page__title">Six &#38; more</h1>
	<div class="ts-terms" data-region="terms">
<p class="ts-terms__description">a number</p>
<p class="ts-terms__aliases">Also known as <span>6 · half dozen</span>
</p>
</div>
	<nav class="ts-tabs" aria-label="Page">
		<a class="ts-tabs__link" href="/wiki/Item:Q6">Statements</a>
		<a class="ts-tabs__link" href="/wiki/Item:Q6?tab=identifiers">Identifiers</a>
		<a class="ts-tabs__link" href="/wiki/Item:Q6?tab=sitelinks">Sitelinks</a>
		<a class="ts-tabs__link" href="/wiki/Item:Q6?tab=labels" aria-current="page">Labels in other languages</a>
		<a class="ts-tabs__link" href="/w/index.php?title=Item:Q6&#38;action=history">History</a>
	</nav>
	<div class="ts-page__body">
		<div class="cdx-table">
	<div class="cdx-table__table-wrapper">
		<table class="cdx-table__table">
			<caption>Labels, descriptions and aliases in every language</caption>
			<thead>
				<tr>
					<th scope="col">Language</th>
					<th scope="col">Label</th>
					<th scope="col">Description</th>
					<th scope="col">Also known as</th>
				</tr>
			</thead>
			<tbody>
				<tr>
					<th scope="row">
<span class="ts-mono">en</span>
</th>
					<td lang="en" dir="auto">Six &amp; more</td>
					<td lang="en" dir="auto">a number</td>
					<td lang="en" dir="auto">6 · half dozen</td>
				</tr>
				<tr>
					<th scope="row">
<span class="ts-mono">ar</span>
</th>
					<td lang="ar" dir="auto">ستة</td>
					<td lang="ar" dir="auto">
</td>
					<td lang="ar" dir="auto">
</td>
				</tr>
				<tr>
					<th scope="row">
<span class="ts-mono">de</span>
</th>
					<td lang="de" dir="auto">Sechs</td>
					<td lang="de" dir="auto">eine Zahl</td>
					<td lang="de" dir="auto">
</td>
				</tr>
			</tbody>
		</table>
	</div>
</div>
	</div>
</main>
