crates/triplespace-ui/tests/snapshots/entity__item_sitelinks.snap
---
source: crates/triplespace-ui/tests/entity.rs
expression: main_of(&html)
---
<main class="ts-page" id="content">
	<p class="ts-page__identity">
<span class="ts-chip ts-chip--local">Q6</span> <span>Item</span> <span aria-hidden="true">·</span> <span>Adopted from https://librarybase.org/</span> <span aria-hidden="true">·</span> <a href="https://librarybase.org/entity/Q6" class="external" rel="noopener" dir="ltr">librarybase.org/entity/Q6 ↗</a>
</p>
	<h1 class="ts-page__title">Six &#38; more</h1>
	<div class="ts-terms" data-region="terms">
<p class="ts-terms__description">a number</p>
<p class="ts-terms__aliases">Also known as <span>6 · half dozen</span>
</p>
</div>
	<nav class="ts-tabs" aria-label="Page">
		<a class="ts-tabs__link" href="/wiki/Item:Q6">Statements</a>
		<a class="ts-tabs__link" href="/wiki/Item:Q6?tab=identifiers">Identifiers</a>
		<a class="ts-tabs__link" href="/wiki/Item:Q6?tab=sitelinks" aria-current="page">Sitelinks</a>
		<a class="ts-tabs__link" href="/wiki/Item:Q6?tab=labels">Labels in other languages</a>
	</nav>
	<div class="ts-page__body">
		<div class="ts-sitelinks" data-region="sitelinks">
<p class="ts-empty">No sitelinks yet.</p>
</div>
	</div>
</main>
