crates/triplespace-ui/tests/snapshots/entity__region_statements_p2.snap
---
source: crates/triplespace-ui/tests/entity.rs
expression: "html.replace(\"><\", \">\\n<\")"
---
<section class="ts-group" id="P2" data-region="statements/P2">
<div class="ts-group__property">
<a href="/wiki/Property:P2" title="P2">instance of</a>
<span class="ts-group__count">3 values</span>
</div>
<ol class="ts-group__values">
<li class="ts-statement ts-statement--preferred" id="Q6$00000002-0000-0000-0000-000000000000">
<div class="ts-statement__value">
<a href="/wiki/Item:Q2" title="Q2">number</a> <span class="ts-chip ts-chip--rank">Preferred rank</span>
</div>
</li>
<li class="ts-statement" id="Q6$00000003-0000-0000-0000-000000000000">
<div class="ts-statement__value">
<a href="/wiki/Item:Q1" title="Q1">city</a>
</div>
</li>
<li class="ts-statement ts-statement--deprecated" id="Q6$00000004-0000-0000-0000-000000000000">
<div class="ts-statement__value">
<a href="/wiki/Item:Q3" title="Q3">Example Gazette</a> <span class="ts-chip ts-chip--rank">Deprecated rank</span>
</div>
</li>
</ol>
</section>
